fix submit button to center align

--- a/css/admin.css
+++ b/css/admin.css
@@ -68,6 +68,15 @@ input {
 	width: 100%;
 }
 
+form {
+	display: flex;
+	flex-direction: column;
+}
+
+button[type=submit] {
+	margin: auto;
+}
+
 .form {
 	float: left;
 	position: relative;
